# trainingdata-tool

./: .gitmodules  CMakeLists.txt  PULL_REQUEST.md  README.md
.github/workflows/: cmake-multi-platform.yml
absl/cleanup/: cleanup.h
src/: PGNGame.cpp  PGNGame.h  StaticEvaluator.cpp  StaticEvaluator.h  TrainingDataDedup.cpp  TrainingDataReader.cpp  TrainingDataReader.h  TrainingDataWriter.cpp  TrainingDataWriter.h  V6TrainingDataHashUtil.h  trainingdata-tool.cpp  trainingdata.cpp  trainingdata.h
src/proto/: net.pb.h
